--- a/Leaflet-Part-1/static/css/style.css
+++ b/Leaflet-Part-1/static/css/style.css
@@ -3,7 +3,7 @@ body {
   padding: 0;
   margin: 0;
 }
-  
+
 /* Set map, body, and html to 100% of the screen size. */
 #map,
 body,
@@ -11,35 +11,17 @@ html {
   height: 100%;
 }
 
-/* Set Legend Style */
-.info {
-  padding: 6px 10px;
-  background: #ebfae2;
-  border-radius: 5px;
-}
-
+/* Legend */
 .legend {
-  line-height: 25px;
-  color: #000000;
+  padding: 6px 8px;
+  background: white;
+  background: rgba(255, 255, 255, 0.8);
 }
 
 .legend i {
-  width: 20px;
-  height: 20px;
-  float: right;
-  margin-right: 10px;
-  margin-left: 10px;
-  opacity: 0.75;
-}
-
-h3 {
-  margin: 0px;
-  padding: 2px;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-p {
-  margin: -5px;
-  padding: -6px;
-  font-family: Arial, Helvetica, sans-serif;
+  width: 18px;
+  height: 18px;
+  float: left;
+  margin: 0 8px 0 0;
+  opacity: 0.7;
 }
