--- a/Leaflet-Part-1/static/css/style.css
+++ b/Leaflet-Part-1/static/css/style.css
@@ -12,7 +12,7 @@ html {
 /* Set Legend Style */
 .info {
   padding: 1px 10px;
-  background: #ebfae2;
+  background: #fefffe;
   border-radius: 5px;
 }
 
